--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kuda-test",
-  "homepage": "http://iambigmarn.github.io/kuda-test",
+  "homepage": "http://iambigmarn.github.io/kuda-test/#",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
